wso2/SingleNodeHA/i-manifests/wso2am-ingress.yml
#APIM Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mgr-api
  namespace: wso2
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "INGRESS_NGINX"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - mgr.api.intsmm.net
    secretName: mgr-api-tls
  rules:
  - host: mgr.api.intsmm.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mgr-api
            port:
              number: 443
---
#APIGW Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gw-api
  namespace: wso2
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "INGRESS_NGINX"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - gw.api.intsmm.net
    secretName: gw-api-tls
  rules:
  - host: gw.api.intsmm.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gw-api
            port:
              number: 443
  - host: gw.api.intsmm.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gw-api
            port:
              number: 80
---
#WebSocket API Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ws-api
  namespace: wso2
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "INGRESS_NGINX"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - ws.api.intsmm.net
    secretName: ws-api-tls
  rules:
  - host: ws.api.intsmm.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ws-api
            port:
              number: 443
  - host: ws.api.intsmm.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ws-api
            port:
              number: 80
